admission/ValidatingAdmissionPolicy/policies/capabilities-drop-all/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capabilities-drop-all-initcontainers
  annotations:
    kubeapt.io/uuid: "53066e98-fe0f-4f71-8011-f14d6bf2aefe"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
